# RobotConsole

./: .gitignore  CMakeLists.txt  README.md  hardcoded_settings.json  initCams.py  manual_update_instructions.txt  package-lock.json  package.json  package.json~  package.xml  resetUsbCams.sh  rosconsole_config  rospython_config  server.crt  server.csr  server.js  server.js~  server.key  server.launch  settings.json  update.sh
cert/: README.md  cert.pem  key.pem
example_ROS_nodes/: image_widget.py
example_nodes/: basic_publisher.py  basic_subscriber.py
example_nodes/image_widget/: static_image.py  static_image_png.py  video_stream.py
launch/: launchfile.launch  server.launch
public/: ._resize.png~  canvas.js  config.html  config.js  help.js  index.html  joystick.js  main.js  resize.png~  serial.js  streamAudio.js  widgetHelp.txt  widgets.js
