<?xml version="1.0"?>
<package format="2">
  <name>roboquest_ui</name>
  <version>0.0.2</version>
  <description>The RobotConsole package</description>

  <maintainer email="bill@manialabs.us">Bill Mania</maintainer>
  <author email="cory.duce@gmail.com">Cory Duce</author> -->

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
